add more binary tree -DFS- related code

--- a/binary_tree_dfs.ipynb
+++ b/binary_tree_dfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20da9ef5",
+   "id": "55405069",
    "metadata": {},
    "source": [
     "# Binary Tree - DFS"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2ce3f7e",
+   "id": "7d9c4815",
    "metadata": {},
    "source": [
     "## 1) Maximum Depth of Binary Tree\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51b098f2",
+   "id": "53ca1f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f5809ac3",
+   "id": "0352f58c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ce74d71f",
+   "id": "edad4958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4159b14d",
+   "id": "8285e626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a4a0de04",
+   "id": "29964842",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d3b98440",
+   "id": "5c3b2458",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "64fdfef0",
+   "id": "e7e37984",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "802e9376",
+   "id": "1c10e62d",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36a7259",
+   "id": "931b89cf",
    "metadata": {},
    "source": [
     "## 2) Leaf-Similar Trees\n",
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7bc2ed55",
+   "id": "b12ae225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e09ba441",
+   "id": "1abe5cb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d4819528",
+   "id": "87117e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b31f1d6c",
+   "id": "65cf49df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9848a8c9",
+   "id": "3d30cd79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e532fdef",
+   "id": "79f1c1bb",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a57b0000",
+   "id": "cd03bf49",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ab223c51",
+   "id": "4eb0a288",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "448b10d5",
+   "id": "4aa25892",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9810b05",
+   "id": "660a8c78",
    "metadata": {},
    "source": [
     "## 3) 1448. Count Good Nodes in Binary Tree\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b502814d",
+   "id": "04060f69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c7e1cd9e",
+   "id": "a026541c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "fd072179",
+   "id": "f291ecae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "59bcf49d",
+   "id": "6cb3347a",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5a04f250",
+   "id": "62ecefd5",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "25efa024",
+   "id": "8d64fd97",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "81d5cd96",
+   "id": "17d12eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "35de8959",
+   "id": "5ae51d4d",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "eeaed4f6",
+   "id": "8c7ac8fe",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ace112bc",
+   "id": "81896654",
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf2c29d",
+   "id": "57aabbc8",
    "metadata": {},
    "source": [
     "## 4) Path Sum III\n",
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "31fa9fa5",
+   "id": "eb869cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "6eaece1d",
+   "id": "6c9a1df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "5a0c707f",
+   "id": "3ed8a125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
     "        # The number of times the curr_sum − k has occurred already, \n",
     "        # determines the number of times a path with sum k \n",
     "        # has occurred up to the current node\n",
-    "        # THIS LINE IS THE KEY TO THIS SOLUTION.\n",
+    "        # THE KEY PART OF THE SOLUTION:\n",
     "        count += h[curr_sum - k]\n",
     "            \n",
     "        # Add the current sum into a hashmap\n",
@@ -823,8 +823,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "ef733f4e",
+   "execution_count": 118,
+   "id": "9562db25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same Solution (probably easier to understand)\n",
+    "\n",
+    "def pathSum(root: Optional[TreeNode], targetSum: int) -> int:\n",
+    "    sums = defaultdict(int)\n",
+    "    sums[0] = 1\n",
+    "        \n",
+    "    def dfs(root, total):\n",
+    "        count = 0\n",
+    "        if root:\n",
+    "            total += root.val\n",
+    "\n",
+    "            count = sums[total - targetSum]\n",
+    "\n",
+    "            # THE KEY PART OF THE SOLUTION: \n",
+    "            sums[total] += 1\n",
+    "            count += dfs(root.left, total) + dfs(root.right, total)\n",
+    "            sums[total] -= 1\n",
+    "        return count\n",
+    "    \n",
+    "    return dfs(root, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "c63e1405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pathSum_iter(root: Optional[TreeNode], targetSum: int) -> int:\n",
+    "    \n",
+    "    if not root:\n",
+    "        return 0\n",
+    "    \n",
+    "    count = 0\n",
+    "    \n",
+    "    # To track all the prefix sums\n",
+    "    prefix_sums = defaultdict(int)\n",
+    "    \n",
+    "    prefix_nodes = []\n",
+    "    prefix_sum = 0\n",
+    "    \n",
+    "    next_nodes = [(root, 1)]\n",
+    "    \n",
+    "    while next_nodes:\n",
+    "        node, depth = next_nodes.pop()\n",
+    "        \n",
+    "        # Correct the prefix_sum by subtracting the values of nodes\n",
+    "        # that are not a part of the this node's path to the root.\n",
+    "        while len(prefix_nodes) >= depth:\n",
+    "            prefix_sums[prefix_sum] -= 1\n",
+    "            prefix_sum -= prefix_nodes.pop()\n",
+    "        \n",
+    "        prefix_sum += node.val\n",
+    "        \n",
+    "        if prefix_sum == targetSum:\n",
+    "            count += 1\n",
+    "        \n",
+    "        count += prefix_sums[prefix_sum - targetSum]\n",
+    "        \n",
+    "        prefix_nodes.append(node.val)\n",
+    "        prefix_sums[prefix_sum] += 1\n",
+    "        \n",
+    "        if node.right:\n",
+    "            next_nodes.append((node.right, depth + 1))\n",
+    "\n",
+    "        if node.left:\n",
+    "            next_nodes.append((node.left, depth + 1))\n",
+    "        \n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "46a15e0f",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +912,7 @@
        "3"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,8 +933,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "c18d0315",
+   "execution_count": 127,
+   "id": "984e155c",
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +943,7 @@
        "3"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,8 +965,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "id": "58bf7d05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_1 = TreeNode(10)\n",
+    "root_1.left = TreeNode(5)\n",
+    "root_1.right = TreeNode(-3)\n",
+    "root_1.left.left = TreeNode(3)\n",
+    "root_1.left.right = TreeNode(2)\n",
+    "root_1.right.right = TreeNode(11)\n",
+    "root_1.left.left.left = TreeNode(3)\n",
+    "root_1.left.left.right = TreeNode(-2)\n",
+    "root_1.left.right.right = TreeNode(1)\n",
+    "\n",
+    "pathSum_iter(root_1, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "6dc9a132",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_2 = TreeNode(5)\n",
+    "root_2.left = TreeNode(4)\n",
+    "root_2.right = TreeNode(8)\n",
+    "root_2.left.left = TreeNode(11)\n",
+    "root_2.left.left.left = TreeNode(7)\n",
+    "root_2.left.left.right = TreeNode(2)\n",
+    "root_2.right.left = TreeNode(13)\n",
+    "root_2.right.right = TreeNode(4)\n",
+    "root_2.right.right.left = TreeNode(5)\n",
+    "root_2.right.right.right = TreeNode(1)\n",
+    "\n",
+    "pathSum_iter(root_2, 22)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6deb68a8",
+   "id": "18d00bab",
    "metadata": {},
    "outputs": [],
    "source": []
