minor updates on binary search tree related code

--- a/binary_search_tree.ipynb
+++ b/binary_search_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a1be5b92",
+   "id": "d42eaf65",
    "metadata": {},
    "source": [
     "# Binary Search Tree"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06bf617b",
+   "id": "7a892d9d",
    "metadata": {},
    "source": [
     "## 1) Search in a Binary Search Tree\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b950b6a1",
+   "id": "b7b40fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a1330da",
+   "id": "197addeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "3c215188",
+   "id": "cea0f398",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1a7f2468",
+   "id": "cae4c7d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "2239ade3",
+   "id": "c819c162",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "517340f0",
+   "id": "1e80b321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "345e7d59",
+   "id": "4e308abe",
    "metadata": {},
    "source": [
     "## 2) Delete Node in a BST\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c512f25e",
+   "id": "36f9d68c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "b7a9ecf3",
+   "execution_count": 112,
+   "id": "05c162c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,10 +215,10 @@
     "            succParent = succ\n",
     "            succ = succ.left\n",
     "        \n",
-    "        # Delete successor.  Since successor\n",
+    "        # Delete successor. Since successor\n",
     "        # is always left child of its parent\n",
     "        # we can safely make successor's right\n",
-    "        # right child as left of its parent.\n",
+    "        # child as left of its parent.\n",
     "        # If there is no succ, then assign\n",
     "        # succ.right to succParent.right\n",
     "        \n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "bd437879",
+   "id": "1e97b5b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "dedee13d",
+   "execution_count": 114,
+   "id": "e5e73875",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "5"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,13 +309,13 @@
     "root.left.right = TreeNode(4)\n",
     "root.right.right = TreeNode(7)\n",
     "\n",
-    "deleteNode(root, 3).val"
+    "deleteNode(root, 2).val"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28418a25",
+   "id": "8f46e961",
    "metadata": {},
    "outputs": [],
    "source": []
